# rillio

./: .gitattributes  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.claude/: launch.json
.github/workflows/: android-beta.yml  build-android.yml  ci.yml  release.yml
apps/desktop/shell/: .gitignore  Cargo.toml
apps/desktop/shell/src/: egl.rs  main.rs  mpvffi.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  mpv.rs  platform.rs  shell.rs  surface.rs  thumbs.rs  update_window.rs
apps/desktop/src-tauri/src/shaders/: panel-blur.glsl
apps/shell/: CMakeLists.txt  Info.plist  WINDOWS.md  build_windows.bat  server-url.txt  sign.ps1  stremio.pro  stremio.rc
apps/shell/windows/: generate_stremio-runtime.cmd
apps/web/: Dockerfile  README.md  manifest.json  package.json  tsconfig.json  webpack.config.js
apps/web/src/: index.html  index.js  index.tsx  modules.d.ts  update.html
apps/web/src/App/: App.js  App.tsx  index.ts  (+10 more)
checklists/: android-mpv.md  streaming-server-rust.md  stremio-sync.md
crates/core/: Cargo.toml
crates/core-web/: Cargo.toml  README.md  package.json
crates/core-web/.cargo/: config.toml
crates/core-web/scripts/: build.mjs
crates/core-web/src/: env.rs  event.rs  lib.rs  rillio_core_web.rs  stremio_core_web.rs  worker.js
crates/core-web/src/model/: model.rs  serialize_calendar.rs  serialize_catalogs_with_extra.rs  serialize_continue_watching_preview.rs  serialize_ctx.rs  serialize_data_export.rs  serialize_discover.rs  serialize_installed_addons.rs  serialize_library.rs  serialize_local_search.rs  serialize_meta_details.rs  serialize_player.rs  serialize_remote_addons.rs  serialize_streaming_server.rs
crates/core-web/src/model/deep_links_ext/: addons_deep_links.rs  calendar_deep_links.rs  discover_deep_links.rs  library_deep_links.rs  library_item_deep_links.rs  local_search_deep_links.rs  meta_item_deep_links.rs  search_history_deep_links.rs  stream_deep_links.rs  video_deep_links.rs
crates/core/src/: constants.rs  lib.rs
crates/core/src/addon_transport/http_transport/: http_transport.rs
crates/core/src/addon_transport/http_transport/legacy/: legacy_manifest.rs  mod.rs
crates/core/src/deep_links/: mod.rs
crates/core/src/models/: addon_details.rs  calendar.rs  catalog_with_filters.rs  data_export.rs  installed_addons_with_filters.rs  link.rs  local_search.rs  meta_details.rs  player.rs  streaming_server.rs
crates/core/src/models/common/: compare_with_priorities.rs  loadable.rs  resource_loadable.rs
crates/core/src/models/ctx/: ctx.rs  update_events.rs  update_library.rs  update_notifications.rs  update_profile.rs  update_search_history.rs  update_streaming_server_urls.rs  update_streams.rs  update_trakt_addon.rs
crates/core/src/runtime/: effects.rs  env.rs  runtime.rs
crates/core/src/runtime/msg/: action.rs  event.rs  internal.rs
crates/core/src/types/: mod.rs  serde_as_ext.rs  torrent.rs
crates/core/src/types/addon/: manifest.rs  response.rs
crates/core/src/types/api/: request.rs  response.rs
crates/core/src/types/profile/: auth.rs  profile.rs  settings.rs  user.rs
crates/core/src/types/rating/: mod.rs  rating.rs  rating_info.rs  request.rs  response.rs
crates/core/src/types/resource/: meta_item.rs  stream.rs  subtitles.rs
crates/core/src/types/server_urls/: server_urls_bucket.rs
crates/core/src/types/streaming_server/: mod.rs  request.rs  response.rs  statistics.rs
crates/core/src/types/streams/: converted_source.rs  streams_item.rs
crates/core/src/unit_tests/: data_export.rs  env.rs  link.rs
crates/core/src/unit_tests/calendar/: load_action.rs
crates/core/src/unit_tests/catalog_with_filters/: load_action.rs
crates/core/src/unit_tests/ctx/: add_to_library.rs  authenticate.rs  delete_account.rs  install_addon.rs  logout.rs  mark_meta_item_as_watched.rs  mod.rs  pull_addons_from_api.rs  push_addons_to_api.rs  remove_from_library.rs  rewind_library_item.rs  sync_library_with_api.rs  uninstall_addon.rs  update_events.rs  update_search_history.rs  update_settings.rs  update_streaming_server_urls.rs  upgrade_addon.rs
crates/core/src/unit_tests/ctx/notifications/: update_notifications.rs
crates/core/src/unit_tests/deep_links/: external_player_link.rs  stream_deep_links.rs
crates/core/src/unit_tests/meta_details/: mark_video_as_watched.rs  mod.rs  override_selected.rs
crates/core/src/unit_tests/player/: mark_video_as_watched.rs  mod.rs  next_stream.rs
crates/core/src/unit_tests/serde/: auth_request.rs  default_tokens_ext.rs  library_bucket.rs  library_bucket_ref.rs  library_item.rs  manifest.rs  manifest_catalog.rs  manifest_preview.rs  meta_item.rs  meta_item_preview.rs  resource_path.rs  settings.rs  stream_source.rs  subtitles.rs  user.rs  video.rs
crates/core/src/unit_tests/streaming_server/: mod.rs  playback_devices.rs  remote_endpoint.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/streaming-server/: Cargo.toml
crates/streaming-server/src/: cache_api.rs  config.rs  engine.rs  hlsv2.rs  lib.rs  local_addon.rs  proxy.rs  routes.rs  security.rs  ssrf.rs  stats.rs  storage.rs  stream.rs  support.rs  torrent.rs  types.rs
crates/streaming-server/tests/: cache_playable_file.rs  confinement.rs  engine_bootstrap.rs  local_addon_e2e.rs  oracle_diff.rs  proxy_e2e.rs  remove_routes.rs  stats_routes.rs  support_e2e.rs
crates/watched-bitfield/: Cargo.toml
crates/watched-bitfield/src/: bitfield8.rs  watched_bitfield.rs
docker/streaming-server/: Dockerfile  README.md  compose.yaml
docs/: cross-platform-refactor.md
docs/android-mpv/: decomposition.md
docs/streaming-server-rust/: README.md  decomposition.md
docs/stremio-sync/: decomposition.md
docs/ui-rewrite/: component-map.md  decisions.md
docs/update-window/: decomposition.md
landing/: index.html
scripts/: fetch-libmpv-android.ps1  fetch-libmpv-android.sh  fetch-libmpv-windows.ps1
(+545 files in other folders)
