 [package]
name = "rillio-core-web"
version = "0.59.0"
authors = ["Smart Code OOD"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["std", "wasm"]

std = []
# enable wasm bindings exports, enabled by default (rillio-core-web crate after all)
wasm = ["env", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:gloo-utils", "dep:tracing-wasm", "dep:console_error_panic_hook", "dep:js-sys", "dep:web-sys"]
# Enable's the wasm Env. impl
# (this means that `wasm` feature is a superset of this one)
env = ["dep:http", "dep:serde_path_to_error"]

# enable TRACE level of logging in the crate using `tracing`.
log-trace = []

[dependencies]
rillio-core = { version = "0.1", features = ["derive"], path = "../core" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
futures = "0.3.*"

# used for Env impl
http = { version = "1.2", optional = true }
url = { version = "2.4.*", features = ["serde"] }

chrono = "0.4.*"
semver = { version = "1", features = ["serde"] }
either = "1.6.*"
enclose = "1.1.*"
itertools = "0.14.*"
boolinator = "2.4.*"

# WASM
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-utils = { version = "0.3", features = ["serde"], optional = true }

once_cell = "1"

# panic hook for wasm
console_error_panic_hook = { version = "0.1.*", optional = true }

js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "WorkerGlobalScope",
    "WorkerNavigator",
    "Request",
    "RequestInit",
    "Response",
    "console",
], optional = true }
# for env. impl
serde_path_to_error = { version = "0.1", optional = true }

# Tracing
tracing = "0.1"
tracing-wasm = { version = "0.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[package.metadata.wasm-pack.profile.release]
# iOS 12 Safari - unsupported, flag is insufficient for this version to work and out-of-scope for now
# iOS 14 Safari - unsupported, we need to use `--signext-lowering`
# iOS 15 Safari - supported without this flag, current version is tested and works
wasm-opt = ["--signext-lowering"]
