# Standalone workspace: native-only (Tauri pulls url >=2.5, like the streaming
# server), isolated from the root wasm workspace. Build from this directory.
[workspace]

[package]
name = "rillio-desktop"
version = "0.1.14"
edition = "2021"
description = "Rillio desktop shell (Tauri) embedding the Rust streaming server"
license = "gpl-2.0"

[lib]
name = "rillio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Self-update: check GitHub Releases for a newer signed build, download + verify
# (minisign) + install. The web UI surfaces the "update available" toast (via an
# emitted event) and calls back into the `install_update` command.
tauri-plugin-updater = "2"
# Single-instance guard: a second launch would fail to bind the streaming
# server's :11470 and fight over the shared WebView2 profile, so instead we
# focus the already-running window and let the second process exit.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# The Rust streaming server, embedded in-process (S1). No container/sidecar.
rillio-streaming-server = { path = "../../../crates/streaming-server", default-features = false }
# Open URLs / files in the OS default handler (S2 external-player fallback).
open = "5"
# Dynamically load libmpv-2.dll at runtime (S3). Hand-declared FFI against the
# stable libmpv v2 ABI -> no dev headers/import-lib, DLL-agnostic.
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
# Win32 HWND for mpv `wid` embedding + child-window z-order (S3/S4). Already in
# Tauri's tree.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
